--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "reanimated-bug",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "npx expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/metro-runtime": "~5.0.4",
+    "expo": "~53.0.5",
+    "expo-dev-client": "~5.1.8",
     "expo-status-bar": "~2.2.3",
+    "moti": "^0.30.0",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
